--- a/views/aosc/global/footer.tpl.htm
+++ b/views/aosc/global/footer.tpl.htm
@@ -1,7 +1,6 @@
 <div class="aw-footer-wrap">
 	<div class="aw-footer aw-wecenter">
-		Copyright © <?php echo date('Y'); ?> - <?php echo get_setting('site_name'); ?><?php if(get_setting('icp_beian')){ ?><span class="hidden-xs"> - <a href="http://www.miibeian.gov.cn/" target="_blank"><?php echo get_setting('icp_beian'); ?></a><?php } ?>, All Rights Reserved<br /></span>
-
+		Copyright © <?php echo date('Y'); ?> - <?php echo get_setting('site_name'); ?> <a href="http://wenda.anthonos.org/article/2">联系我们</a> <a href="http://wenda.anthonos.org/page/links">友情链接</a> <a href="http://wenda.anthonos.org/page/sponsor">赞助商列表</a><?php if(get_setting('icp_beian')){ ?><span class="hidden-xs"> - <a href="http://www.miibeian.gov.cn/" target="_blank"><?php echo get_setting('icp_beian'); ?></a><?php } ?>, All Rights Reserved<br /></span>
 		<span class="hidden-xs">Powered By <a href="http://www.wecenter.com/?copyright" target="blank">WeCenter <?php echo G_VERSION; ?></a></span>
 		
 		<span class="hidden-xs"><?php _e('当前时区'); ?>: GMT <?php echo get_time_zone(); ?> &nbsp; <a href="<?php echo get_js_url('/feed/'); ?>" target="blank"><i class="fa fa-rss-square"></i> RSS Feed</a></span>
