--- a/views/aosc/global/footer.tpl.htm
+++ b/views/aosc/global/footer.tpl.htm
@@ -1,9 +1,7 @@
 <div class="aw-footer-wrap">
 	<div class="aw-footer aw-wecenter">
-		Copyright © <?php echo date('Y'); ?> - <?php echo get_setting('site_name'); ?> <a href="http://wenda.anthonos.org/article/2">联系我们</a> <a href="http://wenda.anthonos.org/page/links">友情链接</a> <a href="http://wenda.anthonos.org/page/sponsor">赞助商列表</a><?php if(get_setting('icp_beian')){ ?><span class="hidden-xs"> - <a href="http://www.miibeian.gov.cn/" target="_blank"><?php echo get_setting('icp_beian'); ?></a><?php } ?>, All Rights Reserved<br /></span>
-		<span class="hidden-xs">Powered By <a href="http://www.wecenter.com/?copyright" target="blank">WeCenter <?php echo G_VERSION; ?></a></span>
-		
-		<span class="hidden-xs"><?php _e('当前时区'); ?>: GMT <?php echo get_time_zone(); ?> &nbsp; <a href="<?php echo get_js_url('/feed/'); ?>" target="blank"><i class="fa fa-rss-square"></i> RSS Feed</a></span>
+		Copyleft © <?php echo date('Y'); ?> - AOSC &middot; Page powered by <a href="http://www.wecenter.com/?copyright" target="blank">WeCenter</a> and BootStrap <span class="hidden-xs"> - <a href="http://www.miibeian.gov.cn/" target="_blank">粤ICP备14040623号</a><br /></span>
+		<span class="hidden-xs"><a href="<?php echo get_js_url('/feed/'); ?>" target="blank"><i class="fa fa-rss-square"></i> RSS</a></span> &middot; <a href="http://wenda.anthonos.org/article/2">联系我们</a> &middot; <a href="http://wenda.anthonos.org/page/links">友情链接</a> &middot; <a href="http://wenda.anthonos.org/page/sponsor">赞助商列表</a><br>
 		<?php if (is_mobile()) { ?>
 			<div class="container">
 				<div class="row">
@@ -11,6 +9,8 @@
 				</div>
 			</div>
 		<?php } ?>
+		This website as seen probably won't be possible without our sponsors: UCloud and National Chi Nan University (their logos are as seen below).<br>
+		<img src="/img/ucloud.png" alt="ucloud"><img src="/img/ncnu_logo.png" alt="ncnu">
 	</div>
 </div>
 
