--- a/views/aosc/global/footer.tpl.htm
+++ b/views/aosc/global/footer.tpl.htm
@@ -9,8 +9,7 @@
 				</div>
 			</div>
 		<?php } ?>
-		This website as seen probably won't be possible without our sponsors: UCloud and National Chi Nan University (their logos are as seen below).<br>
-		<img src="/img/ucloud.png" alt="ucloud"><img src="/img/ncnu_logo.png" alt="ncnu">
+		This website as seen probably won't be possible without our sponsors: UCloud and National Chi Nan University<br>
 	</div>
 </div>
 
