--- a/views/aosc/global/footer.tpl.htm
+++ b/views/aosc/global/footer.tpl.htm
@@ -9,7 +9,7 @@
 				</div>
 			</div>
 		<?php } ?>
-		This website as seen probably won't be possible without our sponsors: UCloud and National Chi Nan University<br>
+		This website as seen probably won't be possible without our sponsors: UCloud and Qiniu<br>
 	</div>
 </div>
 
